# token_gateway_poc

./: .dockerignore  .env.example  .gitignore  CLAUDE.md  Dockerfile  Makefile  README.md  alembic.ini  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml
alembic/: env.py
alembic/versions/: ce4bd3842d2f_initial_schema.py
doc/: README.zh-TW.md  aws-cdk-deployment.md  comparison-mixroute.md  comparison-mixroute.zh-TW.md  design-and-implementation.md  follow-ups.md  how-atptoken-works.md  how-to-build-a-token-gateway.md  litellm-evaluation.md  reference-gateway.md
frontend/: index.html
gateway-cdk/: README.md  cdk.json  package-lock.json  package.json
gateway-cdk/lib/: gateway-cdk-stack.ts
gateway-cdk/test/: gateway-cdk.test.ts
scripts/: create_key.py  topup.py
src/gateway/: __init__.py  activity.py  admin.py  auth.py  billing.py  budgets.py  config.py  db.py  errors.py  keys.py  logs.py  main.py  manage.py  metrics.py  models.py  payments.py  pricing.py  proxy.py  ratelimit.py  rbac.py  translate.py  upstream.py  usage.py
tests/: conftest.py  test_admin.py  test_allowlist.py  test_auth.py  test_billing.py  test_budgets.py  test_errors.py  test_manage.py  test_metrics_retries.py  test_models_db.py  test_payments.py  test_providers.py  test_proxy_openai.py  test_ratelimit.py  test_ratelimit_redis.py  test_rbac.py  test_streaming.py  test_stripe.py  test_translate.py
tests/integration/: test_end_to_end_journey.py
tests/unit/: test_budgets_unit.py  test_errors_unit.py  test_keys_unit.py  test_metrics_unit.py  test_payments_unit.py  (+5 more)
(+4 files in other folders)
